# PiDash

./: .gitignore  README.rst  main.py  pico_i2c_lcd.py  pyproject.toml
Pi-Files/: main.py  readserialpico.py
pidash/: pidash.py
tests/: test_pidash.py
