[tool.poetry]
name = "PiDash"
version = "0.1.0"
description = ""
authors = ["Angelo Poggi <angelo.poggi@opti9tech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gpiozero = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
